--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,8 +28,8 @@
 				<data android:scheme="widget" android:host="net.gumbercules.loot" />
 			</intent-filter>
 		</activity>
-		<activity android:name="net.gumbercules.loot.DonateActivity" />
-		<activity android:name="net.gumbercules.loot.premium.PremiumNotFoundActivity" />
+		
+		
 		<activity android:name="net.gumbercules.loot.AboutActivity">
 			<intent-filter>
 				<action android:name="net.gumbercules.loot.intent.action.ABOUT" />
@@ -40,7 +40,7 @@
 		<activity android:name="net.gumbercules.loot.repeat.RepeatManagerActivity" />
 		<activity android:name="net.gumbercules.loot.premium.ViewImage"
 			android:theme="@android:style/Theme.Dialog" />
-        <activity android:name="net.gumbercules.loot.premium.ExportActivity"
+        <activity android:name="net.gumbercules.loot.premium.export.ExportActivity"
             android:exported="true" android:windowSoftInputMode="stateAlwaysHidden"
             android:excludeFromRecents="true">
             <intent-filter android:label="net.gumbercules.loot.premium.EXPORT">
@@ -55,13 +55,13 @@
             </intent-filter>
         </activity>
         <activity android:excludeFromRecents="true" android:exported="true"
-            android:name="net.gumbercules.loot.premium.ChartMenuActivity">
+            android:name="net.gumbercules.loot.premium.chart.ChartMenuActivity">
             <intent-filter android:label="net.gumbercules.loot.premium.CHART">
                 <action android:name="net.gumbercules.loot.premium.CHART" />
             </intent-filter>
         </activity>
         <activity android:excludeFromRecents="true"
-            android:name="net.gumbercules.loot.premium.ChartActivity"
+            android:name="net.gumbercules.loot.premium.chart.ChartActivity"
             android:screenOrientation="landscape" />
         <provider android:authorities="net.gumbercules.loot.transactionprovider"
 			android:name="net.gumbercules.loot.transaction.TransactionProvider" />
@@ -74,7 +74,7 @@
 				<action android:name="net.gumbercules.loot.intent.ACCOUNT_UPDATED" />
 			</intent-filter>
 		</receiver>
-		<service android:name="net.gumbercules.loot.premium.DbBackupService">
+		<service android:name="net.gumbercules.loot.premium.backup.DbBackupService">
 			<intent-filter>
 				<action android:name="net.gumbercules.action.BACKUP_DATABASE" />
 			</intent-filter>
