--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,5 @@
 			<attribute name="javadoc_location" value="file:/C:/javacsv/doc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
